# svcore

./: .gitignore  .hgtags  Doxyfile  acinclude.m4  config.pri.in  configure  configure.ac  files.pri  svcore.pro
base/: AudioLevel.cpp  AudioLevel.h  AudioPlaySource.h  AudioRecordTarget.h  BaseTypes.h  ById.cpp  ById.h  Clipboard.cpp  Clipboard.h  ColourDatabase.cpp  ColourDatabase.h  ColourMapper.cpp  ColourMapper.h  ColumnOp.cpp  ColumnOp.h  Command.cpp  Command.h  CommandHistory.cpp  CommandHistory.h  ConfigFile.cpp  DataExportOptions.h  Debug.cpp  Debug.h  Event.cpp  Event.h  EventSeries.cpp  EventSeries.h  Exceptions.cpp  Exceptions.h  Extents.h  FFTCache.cpp  FFTCache.h  FFTFileCache.cpp  FFTFileCache.h  FileReadThread.cpp  FileReadThread.h  FrameTimer.h  HelperExecPath.cpp  HelperExecPath.h  HitCount.cpp  (+92 more)
base/test/: RangeMapperTest.h  StressEventSeries.h  TestById.h  TestColumnOp.h  TestEventSeries.h  TestLogRange.h  TestMovingMedian.h  TestOurRealTime.h  TestPitch.h  TestPointSeries.h  TestRangeMapper.h  TestRealTime.h  TestScaleTickIntervals.h  TestStringBits.h  TestVampRealTime.h  files.pri  main.cpp  svcore-base-test.cpp  test.pro
data/: data.pro
data/fft/: FFTCache.cpp  FFTCache.h  FFTCacheReader.h  FFTCacheWriter.h  FFTDataServer.cpp  FFTDataServer.h  FFTFileCache.cpp  FFTFileCache.h  FFTFileCacheReader.cpp  FFTFileCacheReader.h  FFTFileCacheWriter.cpp  FFTFileCacheWriter.h  FFTMemoryCache.cpp  FFTMemoryCache.h  FFTapi.cpp  FFTapi.h
data/fileio/: AudioFileReader.cpp  AudioFileReader.h  AudioFileReaderFactory.cpp  AudioFileReaderFactory.h  AudioFileSizeEstimator.cpp  AudioFileSizeEstimator.h  BQAFileReader.cpp  BQAFileReader.h  BZipFileDevice.cpp  BZipFileDevice.h  CSVFileReader.cpp  CSVFileReader.h  CSVFileWriter.cpp  CSVFileWriter.h  CSVFormat.cpp  CSVFormat.h  CSVStreamWriter.h  CachedFile.cpp  CachedFile.h  CodedAudioFileReader.cpp  CodedAudioFileReader.h  ConfigFile.h  CoreAudioFileReader.cpp  CoreAudioFileReader.h  DataFileReader.h  DataFileReaderFactory.cpp  DataFileReaderFactory.h  DecodingWavFileReader.cpp  DecodingWavFileReader.h  FFTDataServer.h  FFTFileCache.h  FFTFuzzyAdapter.cpp  FileFinder.cpp  FileFinder.h  FileReadThread.cpp  FileReadThread.h  FileSource.cpp  FileSource.h  MIDIFileReader.cpp  MIDIFileReader.h  (+26 more)
data/midi/: MIDIEvent.h  MIDIInput.cpp  MIDIInput.h
data/model/: AggregateWaveModel.cpp  AggregateWaveModel.h  AlignmentModel.cpp  AlignmentModel.h  BasicCompressedDenseThreeDimensionalModel.cpp  BasicCompressedDenseThreeDimensionalModel.h  BoxModel.h  DeferredNotifier.h  Dense3DModelPeakCache.cpp  Dense3DModelPeakCache.h  DenseThreeDimensionalModel.cpp  DenseThreeDimensionalModel.h  DenseTimeValueModel.cpp  DenseTimeValueModel.h  EditableDenseThreeDimensionalModel.cpp  EditableDenseThreeDimensionalModel.h  EventCommands.h  FFTModel.cpp  FFTModel.h  FlexiNoteModel.h  ImageModel.h  IntervalModel.h  Labeller.h  Model.cpp  Model.h  ModelDataTableModel.cpp  ModelDataTableModel.h  NoteData.h  NoteModel.cpp  NoteModel.h  Path.h  PathModel.h  PowerOfSqrtTwoZoomConstraint.cpp  PowerOfSqrtTwoZoomConstraint.h  PowerOfTwoZoomConstraint.cpp  PowerOfTwoZoomConstraint.h  RangeSummarisableTimeValueModel.cpp  RangeSummarisableTimeValueModel.h  ReadOnlyWaveFileModel.cpp  ReadOnlyWaveFileModel.h  (+16 more)
data/osc/: OSCMessage.cpp  OSCMessage.h  (+4 more)
plugin/: DSSIPluginFactory.cpp  DSSIPluginFactory.h  DSSIPluginInstance.cpp  DSSIPluginInstance.h  FeatureExtractionPlugin.h  FeatureExtractionPluginAdapter.cpp  FeatureExtractionPluginAdapter.h  FeatureExtractionPluginFactory.cpp  FeatureExtractionPluginFactory.h  FeatureExtractionPluginHostAdapter.cpp  FeatureExtractionPluginHostAdapter.h  LADSPAPluginFactory.cpp  LADSPAPluginFactory.h  LADSPAPluginInstance.cpp  LADSPAPluginInstance.h  NativeVampPluginFactory.cpp  NativeVampPluginFactory.h  PiperVampPluginFactory.cpp  PiperVampPluginFactory.h  PluginDescription.h  PluginIdentifier.cpp  PluginIdentifier.h  PluginInstance.cpp  PluginInstance.h  PluginPathSetter.cpp  PluginPathSetter.h  PluginScan.cpp  PluginScan.h  PluginXml.cpp  PluginXml.h  Provider.h  RealTimePluginFactory.cpp  RealTimePluginFactory.h  RealTimePluginInstance.cpp  RealTimePluginInstance.h  plugin.pro
rdf/: PluginRDFDescription.cpp  PluginRDFDescription.h  PluginRDFIndexer.cpp  PluginRDFIndexer.h  RDFExporter.cpp  RDFExporter.h  RDFFeatureWriter.cpp  RDFFeatureWriter.h  RDFImporter.cpp  RDFImporter.h  RDFTransformFactory.cpp  RDFTransformFactory.h  SimpleSPARQLQuery.cpp  SimpleSPARQLQuery.h  rdf.pro
system/: Init.cpp  System.cpp  System.h  os-other.cpp  os-win10.cpp  system.pro
test/: TestHelper.h
transform/: BeatDetectTransform.cpp  BeatDetectTransform.h  BeatDetectionFunctionTransform.cpp  BeatDetectionFunctionTransform.h  CSVFeatureWriter.cpp  CSVFeatureWriter.h  FeatureExtractionModelTransformer.cpp  FeatureExtractionModelTransformer.h  FeatureExtractionPluginTransform.cpp  FeatureExtractionPluginTransform.h  FeatureWriter.h  FileFeatureWriter.cpp  FileFeatureWriter.h  ModelTransformer.cpp  ModelTransformer.h  ModelTransformerFactory.cpp  ModelTransformerFactory.h  RealTimeEffectModelTransformer.cpp  RealTimeEffectModelTransformer.h  RealTimePluginTransform.cpp  RealTimePluginTransform.h  Transform.cpp  Transform.h  TransformDescription.h  TransformFactory.cpp  TransformFactory.h  transform.pro
(+82 files in other folders)
